添加debugbar 配置文件

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,10 @@
         "think": {
             "services": [
                 "think\\debugbar\\Service"
-            ]
+            ],
+            "config":{
+                "debugbar": "src/config.php"
+            }       
         }
     },
     "autoload": {
